infra/k8s/posts.yaml
apiVersion: v1
kind: Pod
metadata:
  name: posts
spec:
  containers:
    - name: posts
      image: fabri7/posts:0.0.1
      imagePullPolicy: Never
